--- a/chi-siamo/team/andrea-tagliazucchi.html
+++ b/chi-siamo/team/andrea-tagliazucchi.html
@@ -32,6 +32,8 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
+                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li class="divider"></li>
                 <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
@@ -189,6 +191,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
+                <a href="http://beerstrot.it/social/">Social</a>
                 <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
