--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
+                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li class="divider"></li>
                 <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
@@ -86,7 +88,7 @@
         </div>
     </header>
 <!-- fine header -->
-    <div class="panel-home-n">
+    <div class="panel-home-2n">
         <div class="row">
             <div class="medium-12 large-12 columns">
                 <h1>Menù</h1>
@@ -103,7 +105,7 @@
             </div>
         </div>
     </div>
-    <div class="panel-home-2n">
+    <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
                 <h1>Eventi</h1>
@@ -126,21 +128,38 @@
             </div>
         </div>
     </div>
-    <div class="panel-home-n">
+    <div class="panel-home-2n">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Chi Siamo</h1>
+                <h1>Social</h1>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+                <a role="button" href="http://beerstrot.it/social/"><img src="http://beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
+            </div>
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nella pagina Social di Ca' Vecchia Beerstrot. 
+                <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p>
+                <a role="button" href="http://beerstrot.it/social/">Scopri il Lato Social &rarr;</a>
+            </div>
+        </div>
+    </div>
+    <div class="panel-home-n">
+        <div class="row">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+                <h1>Chi Siamo</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="medium-6 large-6 columns">
                 <div class="flex-video widescreen vimeo extra-space-video">
                     <a role="button" href="http://beerstrot.it/video/">
                         <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe>
                     </a>
                 </div>
             </div>
-            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div class="medium-6 large-6 columns">
                 <p>Amiamo la birra artigianale e il buon cibo.</p>
                 <p>Dal 2005 serviamo piadine ai newyorkesi in due locali in Midtown Manhattan. Ora facciamo il viaggio a ritroso per servire ottima birra artigianale e ottimi hamburger agli Italiani e a tutti coloro che verranno a visitarci.</p>
                 <p>Cosa dicono gli altri di noi: recensioni e commenti.</p>
@@ -150,15 +169,15 @@
     </div>
     <div class="panel-home-2n">
         <div class="row">
-            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
+            <div class="medium-12 large-12 columns">
                 <h1>Contatti</h1>
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 large-6 columns">
+            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
                 <a role="button" href="http://beerstrot.it/contatti/"><img src="http://beerstrot.it/asset/img/medium/contatti.jpg" alt="Insegna Ca' Vecchia Beerstrot" class="extra-space-image-tab-home"></a>
             </div>
-            <div class="medium-6 large-6 columns">
+            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
                 <p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
                 <p>Sei un blogger o un giornalista? Compila il form e ricevi tutte le informazioni necessarie per scrivere su di noi.</p>
                 <a role="button" href="http://beerstrot.it/contatti/">Contattaci &rarr;</a>
@@ -167,15 +186,15 @@
     </div>
     <div class="panel-home-n">
         <div class="row">
-            <div class="medium-12 large-12 columns">
+            <div class="medium-6 large-12 medium-offset-6 large-offset-6 columns">
                 <h1>Blog</h1>
             </div>
         </div>
         <div class="row">
-            <div class="medium-6 medium-push-6 large-6 large-push-6 columns">
+            <div class="medium-6 large-6 columns">
                 <a role="button" href="http://beerstrot.it/blog/"><img src="http://beerstrot.it/asset/img/medium/quattro-birre-artigianali-americane.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
             </div>
-            <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
+            <div class="medium-6 large-6 columns">
                 <p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
                 <a role="button" href="http://beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
             </div>
@@ -299,6 +318,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
+                <a href="http://beerstrot.it/social/">Social</a>
                 <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
