--- a/eventi/index.html
+++ b/eventi/index.html
@@ -32,6 +32,8 @@
                 <li class="divider"></li>
                 <li class="active"><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
+                <li><a href="http://beerstrot.it/social/">Social</a></li>
+                <li class="divider"></li>
                 <li><a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/contatti/">Contatti</a></li>
@@ -231,6 +233,7 @@
                 <a href="http://beerstrot.it">Home</a>
                 <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
+                <a href="http://beerstrot.it/social/">Social</a>
                 <a href="http://beerstrot.it/chi-siamo/">Chi Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
                 <a href="http://beerstrot.it/blog/">Blog</a>
