--- a/social/index.html
+++ b/social/index.html
@@ -80,8 +80,9 @@
 <!-- tab post fine-->
 <!-- tab review inizio--> 
         <section class="content" role="tabpanel" aria-hidden="false" id="review">
-            <div class="row extra-space-image-tab-home">
+            <div class="row">
                 <div class="medium-6 large-6 columns">
+                <span class="extra-space show-for-small"></span>
                     <h3>Cosa dicono i clienti</h3>
                     <a role="button" href="#" class="button extra-space-button" data-reveal-id="recensione-reveal">Scrivi una recensione
                     </a>
