--- a/social/index.html
+++ b/social/index.html
@@ -208,6 +208,7 @@
                     </article>
                 </div>    
                 <div class="medium-6 large-6 columns">
+                    <span class="extra-space show-for-small"></span>
                     <h3>Cosa dice la stampa</h3>
                     <a role="button" href="#" class="button extra-space-button" data-reveal-id="press-kit">Richiedi il Press Kit</a>
                     <div id="press-kit" class="reveal-modal" data-reveal>
