--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -4,12 +4,23 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Vivi l'Esperienza</title>
-    <meta name="description" content="Eventi di Beerstrot: dj set, rock, jazz, spettacoli di cabaret e tanto altro"/>
-    <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <title>Beerstrot | Beersfest | Festa della Birra</title>
+    <meta name="description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="Beerfest: due giorni di birra e concerti"/>
+    <meta name="twitter:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/eventi/fbeerfest.html"/>
+    <meta property="og:url" content="http://beerstrot.it/eventi/beerfest.html"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Beerfest: due giorni di birra e concerti"/>
+    <meta property="og:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/eventi/"/>
+    <link rel="canonical" href="http://beerstrot.it/eventi/beerfest.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -30,7 +41,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/social/">Social</a></li>
                 <li class="divider"></li>
@@ -43,97 +54,107 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-<!-- inizio eventi -->
-    <header class="row">
-        <div class="medium-12 large-12 columns">
-            <h1>Eventi</h1>
-            <hr/>
-        </div>
-    </header>
+<!-- inizio articolo -->
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/beerfest.jpg" alt="Festa della Birra" />
     <div class="row">
-        <div class="medium-12 large-12 columns">
-            <article class="row">  
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">4-5 Settembre 2015</h3>
-                    <h5>Orario: dalle 19:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
-                </div>
-                <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/beerfest.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/beerfest-th.jpg" alt="Festa della Birra"></a>
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>Beerfest: Due Giorni di Birra e Concerti</h2>
-                    <p>Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
-                    <a href="http://beerstrot.it/eventi/beerfest.html">Scopri l'evento &rarr;</a>
-                </div>
+        <article>
+            <aside class="medium-5 large-4 columns">
+               <header>
+                    <div class="row">
+                        <div class="medium-12 large-12 columns">
+                            <h1>Beerfest: Due Giorni di Birra e Concerti</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="medium-12 large-12 columns">
+                            <div class="share-block">
+                                <h5 class="date" style="margin-top: 0.5em;">4-5 Settembre 2015</h5>
+                                <h5>Dalle 19:00</h5>
+                                <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
+                            </div>
+                        </div>
+                    </div>
+                </header>
+            </aside>
+            <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
+                <h2>Birra e Musica live a Ca' Vecchia Beerstrot</h2>
+                <p>Per il ciclo: Feste</p>
+                <p>Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot</p>
+                <hr>
+                <h2>Concerti</h2>
+                <h3 class="subheader">Venerdì 4 Settembre</h3>
+                <ul class="no-bullet">
+                    <li>19:00&ensp;&ndash;&ensp;20:30&emsp; Bloody Sound System _ djset</li>
+                    <li>21:00&ensp;&ndash;&ensp;23:00&emsp; Cadillac _ rock&roll</li>
+                    <li>23:00&ensp;&ndash;&ensp;01:00&emsp; Bloody Sound System _ djset</li>
+                </ul>
+                <h3 class="subheader">Sabato 5 Settembre</h3>
+                <ul class="no-bullet">
+                    <li>19:00&ensp;&ndash;&ensp;20:30&emsp; Boka _ djset</li>
+                    <li>21:00&ensp;&ndash;&ensp;23:00&emsp; SottoZero _ rock&roll</li>
+                    <li>23:00&ensp;&ndash;&ensp;01:00&emsp; Boka _ djset</li>
+                </ul>
+                <hr>
+                <h2>Menù</h2>
+                <h3 class="subheader">Cibo</h3>
+                <ul class="no-bullet">
+                    <li>Panino Salsiccia e Cipolla&emsp; 5</li>
+                    <li>Hamburger&emsp; 5</li>
+                    <li>Cheeseburger&emsp; 5</li>
+                    <li>Alette di Pollo Piccanti&emsp; 5</li>
+                    <li>Patate Fritte&emsp; 2</li>
+                    <li>Patate Arrosto&emsp; 2</li>
+                </ul>
+                <h3 class="subheader">Birre Artigianali</h3>
+                <ul class="no-bullet">
+                    <li>Alla Spina&emsp; 5</li>
+                </ul>
+                <hr>
+<!-- call to action inizio -->
                 <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
+                    <div class="medium-12 large-12 columns">
+                        <h3>Condividi le tue foto e i video con <code>#beerstrot</code></h3>
                     </div>
                 </div>
-            </article>
-            <article class="row">  
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">Da Luglio 2015</h3>
-                    <h5>Orario: dalle 18 alle 20</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+            </div>   
+<!-- call to action fine -->
+        </article>
+    </div>
+<!-- fine articolo -->
+<!-- inizio social sharing -->
+    <div class="row extra-space">
+        <aside class="medium-5 large-4 columns">
+            <h2>Condividi</h2>
+        </aside>
+        <div class="medium-7 large-8 columns">
+            <div class="row">
+                <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
+                    <ul class="block-grid-social-3">
+                        <li>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi/beerfest.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                        </li>
+                        <li>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/eventi/beerfest.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                        </li>
+                        <li>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/eventi/beerfest.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                        </li>
+                    </ul>
                 </div>
-                <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/aperitivi.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/aperitivi-th.jpg" alt="Aperitivi a Ca' Vecchia Beerstrot"></a>
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
-                    <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato.</p>
-                    <a href="http://beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
-                </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                </div>
-            </article>
-            <article class="row">  
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">21 Giu 2015</h3>
-                    <h5>Orario: dalle 20:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
-                </div>
-                <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Flora e Fauna in Concerto"></a>
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>L'estate festeggiamola con i Flora e Fauna</h2>
-                    <p>Musica live a Ca' Vecchia Beerstrot. La band Flora e Fauna di Osimo ci allieterà con la loro musica Pop Rock.</p>
-                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
-                </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                </div>
-            </article>
-            <article class="row">  
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">30 Apr 2015</h3>
-                    <h5>Orario: 17:00-19:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
-                </div>
-                <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/costine-in-salsa-bbq-th.jpg" alt="Costine in Salsa BBQ"></a>
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>Un evento per tossici della birra, hamburger e non solo</h2>
-                    <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
-                    <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
-                </div>
-                <div class="row hide-for-small">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                    </div>
-                </div>
-            </article>
+            </div>
         </div>
     </div>
-<!-- fine tabbar eventi-->
+<!-- fine social sharing -->
+<!-- inizio navigazione nota: non ha extra space -->
+    <div class="row">
+        <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
+            <div class="clearfix">
+                <a href="http://beerstrot.it/eventi/" class="left">&larr; Lista eventi</a>
+                <!-- <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a> -->
+            </div>
+        </div> 
+    </div>
+<!-- fine navigazione -->
 <!-- inizio footer -->
     <footer class="panel-prefooter extra-space-footer">
         <div class="row">
