--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -79,7 +79,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Birra e Musica live a Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Feste</p>
-                <p>Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot</p>
+                <p>Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
                 <hr>
                 <h2>Concerti</h2>
                 <h3 class="subheader">Venerdì 4 Settembre</h3>
