--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -79,9 +79,11 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Birra e Musica live a Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Feste</p>
-                <p>Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
+                <p>Concludiamo l'estate col botto nella splendida cornice di Ca' Vecchia Beerstrot.</p>
+                <p>Due giorni di concerti: Cadillac, SottoZero e due djset: Bloody Sound System e Boka.</p>
+                <p>Tre birrifici artigianali stratosferici: <a href="http://www.mc-77.com" target="_blank">MC77</a>, <a href="http://www.mukkeller.it" target="_blank">Mukkeller</a>, <a href="http://www.birrificioemiliano.com" target="_blank">Birrificio Emiliano</a>.</p>
                 <hr>
-                <h2>Concerti</h2>
+                <h2>Programma</h2>
                 <h3 class="subheader">Venerdì 4 Settembre</h3>
                 <ul class="no-bullet">
                     <li>19:00&ensp;&ndash;&ensp;20:30&emsp; Bloody Sound System _ djset</li>
