--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -13,7 +13,7 @@
     <meta name="twitter:title" content="Beerfest: due giorni di birra e concerti"/>
     <meta name="twitter:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/eventi/fbeerfest.html"/>
+    <meta name="twitter:url" content="http://beerstrot.it/eventi/beerfest.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/beerfest.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Beerfest: due giorni di birra e concerti"/>
@@ -115,7 +115,7 @@
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h3>Condividi le tue foto e i video con <code>#beerstrot</code></h3>
+                        <h3>Condividi le tue foto e video con <code>#beerstrot</code></h3>
                     </div>
                 </div>
             </div>   
