--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Beersfest | Festa della Birra</title>
-    <meta name="description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <meta name="description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Beerfest: due giorni di birra e concerti"/>
-    <meta name="twitter:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <meta name="twitter:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/beerfest.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/beerfest.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Beerfest: due giorni di birra e concerti"/>
-    <meta property="og:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e due djset: Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
+    <meta property="og:description" content="Concludiamo l'estate col botto. Cadillac, SottoZero e i due dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/beerfest.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/beerfest.html"/>
@@ -80,7 +80,7 @@
                 <h2>Birra e Musica live a Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Feste</p>
                 <p>Concludiamo l'estate col botto nella splendida cornice di Ca' Vecchia Beerstrot.</p>
-                <p>Due giorni di concerti: Cadillac, SottoZero e due djset: Bloody Sound System e Boka.</p>
+                <p>Due giorni di concerti: Cadillac, SottoZero e i due dj Bloody Sound System e Boka.</p>
                 <p>Tre birrifici artigianali stratosferici: <a href="http://www.mc-77.com" target="_blank">MC77</a>, <a href="http://www.mukkeller.it" target="_blank">Mukkeller</a>, <a href="http://www.birrificioemiliano.com" target="_blank">Birrificio Emiliano</a>.</p>
                 <hr>
                 <h2>Programma</h2>
