--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -80,7 +80,7 @@
                 <h2>Birra e Musica live a Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Feste</p>
                 <p>Concludiamo l'estate col botto nella splendida cornice di Ca' Vecchia Beerstrot.</p>
-                <p>Due giorni di concerti: Cadillac, SottoZero e i due dj Bloody Sound System e Boka.</p>
+                <p>Due giorni di concerti: Cadillac, SottoZero e i dj Bloody Sound System e Boka.</p>
                 <p>Tre birrifici artigianali stratosferici: <a href="http://www.mc-77.com" target="_blank">MC77</a>, <a href="http://www.mukkeller.it" target="_blank">Mukkeller</a>, <a href="http://www.birrificioemiliano.com" target="_blank">Birrificio Emiliano</a>.</p>
                 <hr>
                 <h2>Programma</h2>
