--- a/eventi/beerfest.html
+++ b/eventi/beerfest.html
@@ -80,14 +80,14 @@
                 <h2>Birra e Musica live a Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Feste</p>
                 <p>Concludiamo l'estate col botto nella splendida cornice di Ca' Vecchia Beerstrot.</p>
-                <p>Due giorni di concerti: Cadillac, SottoZero e i dj Bloody Sound System e Boka.</p>
+                <p>Due giorni di concerti: The Cadillacs Band, SottoZero e i dj Bloody Sound System e Boka.</p>
                 <p>Tre birrifici artigianali stratosferici: <a href="http://www.mc-77.com" target="_blank">MC77</a>, <a href="http://www.mukkeller.it" target="_blank">Mukkeller</a>, <a href="http://www.birrificioemiliano.com" target="_blank">Birrificio Emiliano</a>.</p>
                 <hr>
                 <h2>Programma</h2>
                 <h3 class="subheader">Venerdì 4 Settembre</h3>
                 <ul class="no-bullet">
                     <li>19:00&ensp;&ndash;&ensp;20:30&emsp; Bloody Sound System _ djset</li>
-                    <li>21:00&ensp;&ndash;&ensp;23:00&emsp; Cadillac _ rock&roll</li>
+                    <li>21:00&ensp;&ndash;&ensp;23:00&emsp; The Cadillacs Band _ rock&roll</li>
                     <li>23:00&ensp;&ndash;&ensp;01:00&emsp; Bloody Sound System _ djset</li>
                 </ul>
                 <h3 class="subheader">Sabato 5 Settembre</h3>
