--- a/eventi/index.html
+++ b/eventi/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Beerfest: Due Giorni di Birra e Concerti</h2>
-                    <p>Concludiamo l'estate col botto. Cadillac, SottoZero e i dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
+                    <p>Concludiamo l'estate col botto. The Cadillacs Band, SottoZero e i dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
                     <a href="http://beerstrot.it/eventi/beerfest.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
