--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <a role="button" href="http://beerstrot.it/social/"><img src="http://beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 medium-pull-6 large-6 large-pull-6 columns">
-                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nella pagina Social di Ca' Vecchia Beerstrot. 
+                <p>Dillo con un hashtag: pubblica le tue foto e video con <code>#beerstrot</code> o <code>#cavecchiabeerstrot</code> e appariranno nel <a href="http://beerstrot.it/social/">Lato Social</a> di Ca' Vecchia Beerstrot. 
                 <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p>
                 <a role="button" href="http://beerstrot.it/social/">Scopri il Lato Social &rarr;</a>
             </div>
