--- a/social/index.html
+++ b/social/index.html
@@ -45,7 +45,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Social</h1>
+            <h1>Lato Social</h1>
             <hr>
         </div>
     </header>
