--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="panel-home-2n">
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Social</h1>
+                <h1>Lato Social</h1>
             </div>
         </div>
         <div class="row">
