--- a/eventi/index.html
+++ b/eventi/index.html
@@ -3,15 +3,15 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
     <title>Beerstrot | Vivi l'Esperienza</title>
     <meta name="description" content="Eventi di Beerstrot: dj set, rock, jazz, spettacoli di cabaret e tanto altro"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
+    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png"/>
     <link rel="canonical" href="http://beerstrot.it/eventi/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
@@ -47,7 +47,7 @@
     <header class="row">
         <div class="medium-12 large-12 columns">
             <h1>Eventi</h1>
-            <hr/>
+            <hr>
         </div>
     </header>
     <div class="row">
