--- a/eventi/index.html
+++ b/eventi/index.html
@@ -3,15 +3,15 @@
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Vivi l'Esperienza</title>
     <meta name="description" content="Eventi di Beerstrot: dj set, rock, jazz, spettacoli di cabaret e tanto altro"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png"/>
+    <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet"/>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
@@ -126,12 +126,16 @@
                     <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
                     <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
+                <div class="row hide-for-small">
+                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    </div>
+                </div>
             </article>
         </div>
     </div>
 <!-- fine tabbar eventi-->
 <!-- inizio footer -->
-    <footer class="panel-prefooter">
+    <footer class="panel-prefooter extra-space-footer">
         <div class="row">
             <div class="large-6 medium-6 columns">
                 <h4 class="subheader">Fai parte della community</h4>
@@ -152,6 +156,7 @@
             </div>
             <div class="large-6 medium-6 columns exta-space">
                 <h4 class="subheader exta-space">Iscriviti alla newsletter</h4>
+
                 <form action="//beerstrot.us10.list-manage.com/subscribe/post?u=c0625e76a6851e01d891842f0&amp;id=1d558bd4e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
                     <div class="row collapse">
                         <div class="small-8 columns">
