--- a/eventi/index.html
+++ b/eventi/index.html
@@ -70,6 +70,8 @@
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
                         <hr>
                     </div>
+                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
+                    </div>
                 </div>
             </article>
             <article class="row">  
@@ -89,6 +91,8 @@
                 <div class="row">
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
                         <hr>
+                    </div>
+                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
                     </div>
                 </div>
             </article>
@@ -110,6 +114,8 @@
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
                         <hr>
                     </div>
+                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
+                    </div>
                 </div>
             </article>
             <article class="row">  
@@ -128,6 +134,8 @@
                 </div>
                 <div class="row hide-for-small">
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    </div>
+                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
                     </div>
                 </div>
             </article>
