fix event layout

--- a/eventi/index.html
+++ b/eventi/index.html
@@ -59,21 +59,21 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/beerfest.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/beerfest-th.jpg" alt="Festa della Birra"></a>
+                    <a href="http://beerstrot.it/eventi/beerfest.html">
+                        <img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/beerfest-th.jpg" alt="Festa della Birra">
+                    </a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Beerfest: Due Giorni di Birra e Concerti</h2>
                     <p>Concludiamo l'estate col botto. The Cadillacs Band, SottoZero e i dj Bloody Sound System e Boka. Tre birrifici: MC77, Mukkeller e Birrificio Emiliano. Il tutto nella cornice di Ca' Vecchia Beerstrot.</p>
                     <a href="http://beerstrot.it/eventi/beerfest.html">Scopri l'evento &rarr;</a>
                 </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
-                    </div>
-                </div>
             </article>
+            <div class="row">
+                <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    <hr>
+                </div>
+            </div>
             <article class="row">  
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">Da Luglio 2015</h3>
@@ -88,14 +88,12 @@
                     <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato.</p>
                     <a href="http://beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
                 </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
-                    </div>
-                </div>
             </article>
+            <div class="row">
+                <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    <hr>
+                </div>
+            </div>
             <article class="row">  
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">21 Giu 2015</h3>
@@ -110,14 +108,12 @@
                     <p>Musica live a Ca' Vecchia Beerstrot. La band Flora e Fauna di Osimo ci allieterà con la loro musica Pop Rock.</p>
                     <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
                 </div>
-                <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
-                    </div>
-                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
-                    </div>
-                </div>
             </article>
+            <div class="row">
+                <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                    <hr>
+                </div>
+            </div>
             <article class="row">  
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">30 Apr 2015</h3>
@@ -132,13 +128,11 @@
                     <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
                     <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
                 </div>
-                <div class="row hide-for-small">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                    </div>
-                    <div class="medium-3 medium-pull-9 large-3 large-pull-9 columns">
-                    </div>
-                </div>
             </article>
+            <div class="row hide-for-small">
+                <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                </div>
+            </div>
         </div>
     </div>
 <!-- fine tabbar eventi-->
