--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -12,13 +12,13 @@
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Apertura col Botto"/>
     <meta name="twitter:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/apertura.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/apertura.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/apertura.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Apertura col Botto"/>
     <meta property="og:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/apertura.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/apertura.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -55,7 +55,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ" />
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/apertura.jpg" alt="Apertura Ca' Vecchia Beerstrot" />
     <div class="row">
         <article>
             <aside class="medium-5 large-4 columns">
