--- a/menu/index.html
+++ b/menu/index.html
@@ -112,7 +112,7 @@
                             </li>
                             <li>
                                 <h3>Focacce<span class="right">2,5</span></h3>
-                                <p>focacce all'olio di oliva fatte in casa</p>
+                                <p>focacce all'olio di oliva</p>
                             </li>
                         </ul>
                     </div>
