fix capital letter

--- a/menu/index.html
+++ b/menu/index.html
@@ -588,7 +588,7 @@
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></h3>
-                                <p>hendrick's, botanist 22, monkey 47 Sloe, monkey 47 dry, gin de mare. acqua tonica con estratti rigorosamente naturali</p>
+                                <p>hendrick's, botanist 22, monkey 47 sloe, monkey 47 dry, gin de mare. acqua tonica j. gasco con estratti rigorosamente naturali</p>
                             </li>
                         </ul>
                     </div>
