--- a/eventi/index.html
+++ b/eventi/index.html
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div class="medium-6 large-6 columns">
-                    <h2>120+ Instagramer si incontrano a Ca' Vecchia Beerstrot</h2>
+                    <h2>Instagramer si incontrano a Ca' Vecchia Beerstrot</h2>
                     <p>Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk.</p>
                     <a href="http://beerstrot.it/eventi/instagramer.html">Scopri l'evento &rarr;</a>
                 </div>
