--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -62,7 +62,7 @@
                <header>
                     <div class="row">
                         <div class="medium-12 large-12 columns">
-                            <h1>120+ Instagramer si incontrano a Ca' Vecchia Beerstrot</h1>
+                            <h1>Instagramer si incontrano a Ca' Vecchia Beerstrot</h1>
                         </div>
                     </div>
                     <div class="row">
