--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -80,7 +80,8 @@
                 <h2>Come valorizzare le Marche</h2>
                 <p>Per il ciclo: Incontri</p>
                 <p>Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk. <a href="http://assemblea2015.instagramersitalia.it" target="_blank">Qui tutte le info</a></p>
-                <p>Per l'occasione serviremo birre artigianali e vino locale a partire dalle 16.30.</p>
+                <p>Abbiamo già avuto l'onore di averne qualcuno a cena e siamo lieti abbiano deciso di valorizzare Ca' Vecchia con la loro presenza.</p>
+                <p>Per l'occasione, a partire dalle 16.30, serviremo birre artigianali di birrifici marchigiani e vino locale della cantina di Tavignano. A richiesta non mancheranno spritz e gin tonic!</p>
                 
 <!-- call to action inizio -->
                 <div class="row">
