--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -82,15 +82,7 @@
                 <p>Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk. <a href="http://assemblea2015.instagramersitalia.it" target="_blank">Qui tutte le info</a></p>
                 <p>Abbiamo già avuto l'onore di averne qualcuno a cena e siamo lieti abbiano deciso di valorizzare Ca' Vecchia con la loro presenza.</p>
                 <p>Per l'occasione, a partire dalle 16.30, serviremo birre artigianali di birrifici marchigiani e vino locale della cantina di Tavignano. A richiesta non mancheranno spritz e gin tonic!</p>
-                
-<!-- call to action inizio -->
-                <div class="row">
-                    <div class="medium-12 large-12 columns">
-                        <h3>Condividi le tue foto e video con <code>#beerstrot</code></h3>
-                    </div>
-                </div>
-            </div>   
-<!-- call to action fine -->
+                <p>Condividi le tue foto e video con <code>#beerstrot</code></p>
         </article>
     </div>
 <!-- fine articolo -->
