--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://beerstrot.it/eventi/blogger.html"/>
+    <link rel="canonical" href="http://beerstrot.it/eventi/instagramer.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
