--- a/eventi/instagramer.html
+++ b/eventi/instagramer.html
@@ -16,7 +16,7 @@
     <meta name="twitter:url" content="http://beerstrot.it/eventi/instagramer.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/instagramer.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="120+ Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
+    <meta property="og:title" content="Instagramer si incontrano a Ca' Vecchia Beerstrot"/>
     <meta property="og:description" content="Più di 120 Instagramer, provenienti da tutta Italia, si incontrano a Ca' Vecchia per un Instawalk"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/instagramer.jpg"/>
     <link rel="icon" href="http://beerstrot.it/asset/img/thumbs/favicon.png">
